Add imsdatadaemon to readproc group
imsdatadaemon needs access to /proc to find netmgr process.

Bug: 25666929
Change-Id: Ib72010ba4d1c209afe07cee46d67fd126e533aea

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -269,7 +269,7 @@ service imsdatadaemon /system/bin/imsdatadaemon
     class main
     user system
     socket ims_datad stream 0660 system radio
-    group system wifi radio inet log diag
+    group system wifi radio inet log diag readproc
     disabled
 
 service pd_mapper /system/vendor/bin/pd-mapper
