--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -34,7 +34,7 @@ on early-init
     mkdir /dsp 0771 media media
 
 on init
-    export LD_PRELOAD "/system/lib/hw/camera.msm8996.so|libop3_cam.so"
+    export LD_PRELOAD libop3_cam.so
 
 on fs
     wait /dev/block/bootdevice
