--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -365,7 +365,7 @@ service energy-awareness /system/bin/energy-awareness
 service dashd /sbin/dashd
     class core
     critical
-    seclabel u:r:dashd:s0
+#    seclabel u:r:dashd:s0
     group root system
 
 on property:init.svc.healthd=restarting
