--- a/gps/etc/izat.conf
+++ b/gps/etc/izat.conf
@@ -83,7 +83,7 @@ GTP_WAA=DISABLED
 # DISABLED
 # BASIC
 # PREMIUM
-SAP=PREMIUM
+SAP=DISABLED
 
 #ODCPI valid modes:
 #DISABLED
@@ -93,7 +93,7 @@ ODCPI=BASIC
 #FREE_WIFI_SCAN_INJECT valid modes:
 #DISABLED
 #BASIC
-FREE_WIFI_SCAN_INJECT=BASIC
+FREE_WIFI_SCAN_INJECT=DISABLED
 
 #SUPL_WIFI valid modes:
 #DISABLED
@@ -159,7 +159,7 @@ LEAN_TARGETS=DISABLED
 
 PROCESS_NAME=/system/bin/lowi-server
 PROCESS_ARGUMENT=
-PROCESS_STATE=ENABLED
+PROCESS_STATE=DISABLED
 PROCESS_GROUPS=gps net_admin wifi inet qcom_diag net_raw
 PREMIUM_FEATURE=0
 IZAT_FEATURE_MASK=0xf303
@@ -189,7 +189,7 @@ LEAN_TARGETS=DISABLED
 
 PROCESS_NAME=/system/vendor/bin/slim_daemon
 PROCESS_ARGUMENT=
-PROCESS_STATE=ENABLED
+PROCESS_STATE=DISABLED
 PROCESS_GROUPS=gps net_raw qcom_diag
 PREMIUM_FEATURE=1
 IZAT_FEATURE_MASK=0xf0
