--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -30,7 +30,8 @@ import init.msm.usb.configfs.rc
 import init.target.rc
 
 on early-init
-    symlink /proc/wakeup /d
+    mount debugfs debugfs /sys/kernel/debug
+    chmod 0755 /sys/kernel/debug
 
 on init
     # Set permissions for persist partition
