init: start time_daemon when trigger_restart_min_framework
When trigger_restart_min_framework, system time will not be correct
as time_daemon is not started and only tempfs is mounted for data
partition. So start time_daemon when trigger_restart_min_framework.

Change-Id: I7f4b295eb9e7e5465ef0af94ed8ce4a1af574f78
CRs-Fixed: 1063859

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -890,3 +890,6 @@ service poweroffhandler /system/bin/poweroffhandler
     group graphics audio
     disabled
     oneshot
+
+on property:vold.decrypt=trigger_restart_min_framework
+    start time_daemon
