oneplus3: disable lowi-server

--- a/gps/etc/izat.conf
+++ b/gps/etc/izat.conf
@@ -159,7 +159,7 @@ LEAN_TARGETS=DISABLED
 
 PROCESS_NAME=/system/bin/lowi-server
 PROCESS_ARGUMENT=
-PROCESS_STATE=ENABLED
+PROCESS_STATE=DISABLED
 PROCESS_GROUPS=gps net_admin wifi inet qcom_diag net_raw
 PREMIUM_FEATURE=0
 IZAT_FEATURE_MASK=0xf303
