oneplus3: gps: disable SAP and enhanced SAP features
* SAP calibration seems to be broken and
  this ends up blocking a GPS lock.
-> Disable it.

Signed-off-by: Alex Naidis <alex.naidis@linux.com>

--- a/gps/etc/izat.conf
+++ b/gps/etc/izat.conf
@@ -88,7 +88,7 @@ GTP_WAA=DISABLED
 # DISABLED
 # BASIC
 # PREMIUM
-SAP=PREMIUM
+SAP=DISABLED
 
 #ODCPI valid modes:
 #DISABLED
@@ -213,7 +213,7 @@ HARDWARE_TYPE=all
 
 PROCESS_NAME=/system/vendor/bin/slim_daemon
 PROCESS_ARGUMENT=
-PROCESS_STATE=ENABLED
+PROCESS_STATE=DISABLED
 PROCESS_GROUPS=gps qcom_diag can
 PREMIUM_FEATURE=1
 IZAT_FEATURE_MASK=0xf0
