oneplus3: gps: force SUPL mode to 1
Forcing SUPL mode to MS-Based for
using Assisted-GPS position computation.

Signed-off-by: Alex Naidis <alex.naidis@linux.com>

--- a/gps/etc/gps.conf
+++ b/gps/etc/gps.conf
@@ -50,7 +50,7 @@ USE_EMERGENCY_PDN_FOR_EMERGENCY_SUPL=0
 #config.xml.
 #MSA=0X2
 #MSB=0X1
-#SUPL_MODE=
+SUPL_MODE=1
 
 # GPS Capabilities bit mask
 # SCHEDULING = 0x01
