--- a/gps/etc/gps.conf
+++ b/gps/etc/gps.conf
@@ -22,7 +22,7 @@ NTP_SERVER=pool.ntp.org
 # DEBUG LEVELS: 0 - none, 1 - Error, 2 - Warning, 3 - Info
 #               4 - Debug, 5 - Verbose
 # If DEBUG_LEVEL is commented, Android's logging levels will be used
-DEBUG_LEVEL = 3
+DEBUG_LEVEL = 2
 
 # Intermediate position report, 1=enable, 0=disable
 INTERMEDIATE_POS=0
@@ -108,7 +108,11 @@ SGLTE_TARGET=0
 # 0x1: RRC CPlane
 # 0x2: RRLP UPlane
 # 0x4: LLP Uplane
-A_GLONASS_POS_PROTOCOL_SELECT = 0
+#ifndef zuoyonghua@oneplus.cn enable all bit mask for GLONASS
+#A_GLONASS_POS_PROTOCOL_SELECT = 0
+#else
+A_GLONASS_POS_PROTOCOL_SELECT = 15
+#endif
 
 ##################################################
 # Select technology for LPPe Control Plane
