--- a/gps/etc/izat.conf
+++ b/gps/etc/izat.conf
@@ -83,7 +83,7 @@ GTP_CELL_PROC=MODEM
 #GTP_CELL valid modes:
 # DISABLED
 # BASIC
-GTP_CELL=DISABLED
+GTP_CELL=BASIC
 
 #GTP_WIFI valid modes:
 # DISABLED
@@ -99,7 +99,7 @@ GTP_WAA=DISABLED
 # DISABLED
 # BASIC
 # PREMIUM
-SAP=DISABLED
+SAP=PREMIUM
 
 #ODCPI valid modes:
 #DISABLED
@@ -224,7 +224,7 @@ HARDWARE_TYPE=all
 
 PROCESS_NAME=/system/vendor/bin/slim_daemon
 PROCESS_ARGUMENT=
-PROCESS_STATE=DISABLED
+PROCESS_STATE=ENABLED
 PROCESS_GROUPS=gps qcom_diag can
 PREMIUM_FEATURE=1
 IZAT_FEATURE_MASK=0xf0
