--- a/gps/etc/xtwifi.conf
+++ b/gps/etc/xtwifi.conf
@@ -14,11 +14,11 @@ DEBUG_GLOBAL_LOG_LEVEL = 2
 
 # this is used at the server side to distinguish uploads from different maker/model
 # default "Qualcomm"
-OEM_ID_IN_REQUEST_TO_SERVER = "Qualcomm"
+OEM_ID_IN_REQUEST_TO_SERVER = "Paranoid"
 
 # this is used at the server side to distinguish uploads from different maker/model
 # default "UNKNOWN"
-MODEL_ID_IN_REQUEST_TO_SERVER = "UNKNOWN"
+MODEL_ID_IN_REQUEST_TO_SERVER = "OP3"
 
 ##############################################################################
 # GTP-WiFi positioning config                                                #
