--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -367,3 +367,11 @@ service mdtpd /system/vendor/bin/mdtpd
    class late_start
    user root
    group system radio drmrpc
+
+on charger
+    write /sys/devices/system/cpu/cpu2/online 0
+    write /sys/devices/system/cpu/cpu3/online 0
+    write /sys/module/lpm_levels/parameters/sleep_disabled 0
+    wait /dev/block/bootdevice/by-name/system
+    mount ext4 /dev/block/bootdevice/by-name/system /system ro barrier=1
+    start dashd
