oneplus3: mark swappiness as 0
This is basically a no-op, but
we would prefer kernel apps to be
able to show that swapping is disabled
to users.

Signed-off-by: Alex Naidis <alex.naidis@linux.com>

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -39,6 +39,8 @@ on init
 
     symlink /sdcard /storage/sdcard0
 
+    write /proc/sys/vm/swappiness 0
+
     # Create cgroup mount point for memory
     mkdir /sys/fs/cgroup/memory/bg 0750 root system
     write /sys/fs/cgroup/memory/bg/memory.move_charge_at_immigrate 1
