Revert "oneplus3: rootdir: disable swapping"
* Android expects this to stay enabled
* We will make sure to limit swappiness

This reverts commit b35d1ed1755eead5c6ae9d57b6bfc22513e16bd8.

Signed-off-by: Alex Naidis <alex.naidis@linux.com>

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -39,10 +39,9 @@ on init
 
     symlink /sdcard /storage/sdcard0
 
-    write /proc/sys/vm/swappiness 0
-
     # Create cgroup mount point for memory
     mkdir /sys/fs/cgroup/memory/bg 0750 root system
+    write /sys/fs/cgroup/memory/bg/memory.swappiness 140
     write /sys/fs/cgroup/memory/bg/memory.move_charge_at_immigrate 1
     chown root system /sys/fs/cgroup/memory/bg/tasks
     chmod 0660 /sys/fs/cgroup/memory/bg/tasks
@@ -333,6 +332,10 @@ on post-fs-data
     write /data/misc/radio/db_check_done 0
     chown radio radio /data/misc/radio/db_check_done
     chmod 0660 /data/misc/radio/db_check_done
+
+    #Create SWAP related dirs
+    mkdir /data/system/swap 0770 root system
+    chmod 2770 /data/system/swap
 
 service perfd /system/vendor/bin/perfd
    class main
