--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -39,6 +39,7 @@ on init
 on fs
     wait /dev/block/bootdevice
     mount_all fstab.qcom
+    swapon_all fstab.qcom
 
     # Keeping following partitions outside fstab file. As user may not have
     # these partition flashed on the device. Failure to mount any partition in fstab file
