--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -39,6 +39,9 @@ on init
 
     symlink /sdcard /storage/sdcard0
 
+    # Limit swappiness to 10
+    write /proc/sys/vm/swappiness 10
+
     # Create cgroup mount point for memory
     mkdir /sys/fs/cgroup/memory/bg 0750 root system
     write /sys/fs/cgroup/memory/bg/memory.swappiness 140
