--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -442,6 +442,7 @@ service rmt_storage /system/bin/rmt_storage
 service tftp_server /system/bin/tftp_server
    class core
    user root
+   group radio net_raw
 
 on property:wc_transport.start_hci=true
     start start_hci_filter
