--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -233,11 +233,13 @@ service seempd /system/bin/seempd
    user system
    group system
    socket seempdw dgram 0666 system system
+   disabled
 
 service secotad /system/bin/secotad
    class late_start
    user system
    group system
+   disabled
 
 service thermal-engine /system/vendor/bin/thermal-engine
    class main
@@ -353,6 +355,7 @@ service tlocd /system/bin/tloc_daemon
     class late_start
     user system
     group drmrpc gps net_raw
+    disabled
 
 service energy-awareness /system/bin/energy-awareness
     class main
@@ -372,6 +375,7 @@ service mdtpd /system/vendor/bin/mdtpd
    class late_start
    user root
    group system radio drmrpc
+   disabled
 
 on charger
     write /sys/devices/system/cpu/cpu2/online 0
