--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -372,6 +372,12 @@ service mdtpd /system/vendor/bin/mdtpd
    group system radio drmrpc
    disabled
 
+service cameraserver /system/bin/cameraserver
+    class main
+    user cameraserver
+    group audio camera input drmrpc media_rw sdcard_rw
+    ioprio rt 4
+
 on charger
     write /sys/devices/system/cpu/cpu2/online 0
     write /sys/devices/system/cpu/cpu3/online 0
