--- a/gps/etc/gps.conf
+++ b/gps/etc/gps.conf
@@ -41,7 +41,7 @@ INTERMEDIATE_POS=0
 SUPL_VER=0x20000
 
 # Emergency SUPL, 1=enable, 0=disable
-SUPL_ES=0
+#SUPL_ES=
 
 #Choose PDN for Emergency SUPL
 #1 - Use emergency PDN
@@ -53,7 +53,7 @@ USE_EMERGENCY_PDN_FOR_EMERGENCY_SUPL=0
 #config.xml.
 #MSA=0X2
 #MSB=0X1
-SUPL_MODE=1
+#SUPL_MODE=
 
 # GPS Capabilities bit mask
 # SCHEDULING = 0x01
