--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -623,6 +623,9 @@ gTDLSExternalControl=1
 gEnableTDLSOffChannel=1
 
 gEnableTDLSScan=1
+gTDLSTxStatsPeriod=500
+gTDLSTxPacketThreshold=10
+gTDLSIdlePacketThreshold=1
 
 # Enable/Disable Roaming Offload Support (a.k.a Key Management Offload)
 # 0 to disable, 1 to enable
