oneplus3: wifi: Tune BMPS listening interval
Tune the BMPS listening interval for the moderate
power level to achieve power savings during wifi
idle.

Signed-off-by: Alex Naidis <alex.naidis@linux.com>

--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -701,6 +701,9 @@ gDroppedPktDisconnectTh=1024
 # disable packet logging
 gEnablePacketLog=0
 
+# Tune BMPS listening interval
+gBmpsModListenInterval=8
+
 END
 
 # Note: Configuration parser would not read anything past the END marker
