--- a/gps/etc/izat.conf
+++ b/gps/etc/izat.conf
@@ -9,10 +9,18 @@ IZAT_DEBUG_LEVEL = 2
 ##################################################
 WIFI_WAIT_TIMEOUT_SELECT = 0
 
+##################################################
+# Time interval of injecting SRN scan data to modem
+# time in seconds.
+# Note: recommended value is between 1-5 sec
+##################################################
+LPPE_SRN_DATA_SCAN_INJECT_TIME=2
+
 ################################
 # NLP Settings
 ################################
 # NLP_MODE  1: OSNLP Only, 2: QNP Only, 3: Combo, 4: QNP preferred
+# For Automotive products, please use NLP_MODE = 4 only.
 # NLP_TOLERANCE_TIME_FIRST: Time in ms used in Combo mode
 # to determine how much Tolerance for first position
 # NLP_TOLERANCE_TIME_AFTER: Time in ms used in Combo mode
@@ -49,7 +57,6 @@ OSNLP_ACTION = com.android.location.service.v3.NetworkLocationProvider
 #REGION_OSNLP_PACKAGE = com.baidu.map.location
 #REGION_OSNLP_ACTION = com.android.location.service.v3.NetworkLocationProvider
 
-
 # Threshold period for ZPP triggers
 ZPP_TRIGGER_THRESHOLD=60000
 
@@ -68,6 +75,18 @@ ZPP_TRIGGER_THRESHOLD=60000
 GEOFENCE_SERVICES_RESPONSIVENESS_OVERRIDE = 0
 
 #####################################
+#GTP Opt-In app
+#####################################
+
+#GTP privacy policy version url
+#https support is required
+GTP_PRIVACY_VERSION_URL = https://info.izatcloud.net/privacy/version.html
+
+#GTP privacy policy version download retry interval
+#unit is second. default is 86400
+GTP_PRIVACY_RETRY_INTERVAL = 86400
+
+#####################################
 # IZAT PREMIUM FEATURE SETTINGS
 #####################################
 #Possible states of a feature:
@@ -83,12 +102,12 @@ GTP_CELL_PROC=MODEM
 #GTP_CELL valid modes:
 # DISABLED
 # BASIC
-GTP_CELL=BASIC
+GTP_CELL=DISABLED
 
 #GTP_WIFI valid modes:
 # DISABLED
 # BASIC
-GTP_WIFI=BASIC
+GTP_WIFI=DISABLED
 
 #GTP_WAA valid modes:
 # DISABLED
@@ -133,6 +152,9 @@ WIFI_SUPPLICANT_INFO=BASIC
 # ENABLED
 # DISABLED
 
+#PROCESS_NAME
+# Name of the executable file.
+
 #FEATURE MASKS:
 # GTP-WIFI    0X03
 # GTP-AP-CELL 0X0c
@@ -153,10 +175,10 @@ WIFI_SUPPLICANT_INFO=BASIC
 #1. Any valid values obtained from ro.baseband separated by single space. For example: sglte sglte2
 #2. 'all' or 'all exclude' -> for all basebands
 #3. 'all exclude XXXX' -> All basebands exclude XXXX. For example: all exclude sglte
-PROCESS_NAME=/system/bin/DR_AP_Service
+PROCESS_NAME=DR_AP_Service
 PROCESS_ARGUMENT=
 PROCESS_STATE=DISABLED
-PROCESS_GROUPS=gps net_raw diag qcom_diag
+PROCESS_GROUPS=gps diag
 PREMIUM_FEATURE=0
 IZAT_FEATURE_MASK=0
 PLATFORMS=all
@@ -167,10 +189,10 @@ HARDWARE_TYPE=automotive
 #Valyes for LEAN_TARGETS can be:
 #ENABLED  -> if this process is supposed to run on lean and mean targets
 #DISABLED -> if this process is to be disabled on lean and mean targets
-PROCESS_NAME=/system/bin/garden_app
-PROCESS_ARGUMENT=-u 0 -q 0 -j 0 -g 0 -l 0 -Z 0 -T 1
+PROCESS_NAME=garden_app
+PROCESS_ARGUMENT=-l 0 -T 1
 PROCESS_STATE=ENABLED
-PROCESS_GROUPS=gps
+PROCESS_GROUPS=gps diag
 PREMIUM_FEATURE=0
 IZAT_FEATURE_MASK=0
 PLATFORMS=all
@@ -178,7 +200,7 @@ BASEBAND=all
 LEAN_TARGETS=DISABLED
 HARDWARE_TYPE=automotive
 
-PROCESS_NAME=/system/bin/gpsone_daemon
+PROCESS_NAME=gpsone_daemon
 PROCESS_ARGUMENT=
 PROCESS_STATE=ENABLED
 PROCESS_GROUPS=inet
@@ -189,7 +211,7 @@ BASEBAND=svlte2a sglte sglte2
 LEAN_TARGETS=DISABLED
 HARDWARE_TYPE=all
 
-PROCESS_NAME=/system/bin/lowi-server
+PROCESS_NAME=lowi-server
 PROCESS_ARGUMENT=
 PROCESS_STATE=ENABLED
 PROCESS_GROUPS=gps net_admin wifi inet qcom_diag
@@ -200,18 +222,18 @@ BASEBAND=all
 LEAN_TARGETS=DISABLED
 HARDWARE_TYPE=all
 
-PROCESS_NAME=/system/bin/xtwifi-inet-agent
+PROCESS_NAME=xtwifi-inet-agent
 PROCESS_ARGUMENT=
 PROCESS_STATE=ENABLED
 PROCESS_GROUPS=inet gps
 PREMIUM_FEATURE=1
-IZAT_FEATURE_MASK=0xc0f
+IZAT_FEATURE_MASK=0xf0f
 PLATFORMS=all
 BASEBAND=all
 LEAN_TARGETS=DISABLED
 HARDWARE_TYPE=all
 
-PROCESS_NAME=/system/bin/xtwifi-client
+PROCESS_NAME=xtwifi-client
 PROCESS_ARGUMENT=
 PROCESS_STATE=ENABLED
 PROCESS_GROUPS=wifi inet gps rfs_shared system
@@ -222,7 +244,7 @@ BASEBAND=all
 LEAN_TARGETS=DISABLED
 HARDWARE_TYPE=all
 
-PROCESS_NAME=/system/vendor/bin/slim_daemon
+PROCESS_NAME=slim_daemon
 PROCESS_ARGUMENT=
 PROCESS_STATE=ENABLED
 PROCESS_GROUPS=gps qcom_diag can
@@ -232,3 +254,23 @@ PLATFORMS=all
 BASEBAND=all
 LEAN_TARGETS=DISABLED
 HARDWARE_TYPE=all
+
+PROCESS_NAME=xtra-daemon
+PROCESS_ARGUMENT=
+PROCESS_STATE=ENABLED
+PROCESS_GROUPS=inet gps system
+PREMIUM_FEATURE=0
+IZAT_FEATURE_MASK=0
+PLATFORMS=all
+BASEBAND=all
+LEAN_TARGETS=DISABLED
+HARDWARE_TYPE=all
+
+##################################################
+# The name of process which launches XTRA client.
+# Default process name in software which launches
+# XTRA client is system-server. Uncomment the below
+# to set the desired process which will start the
+# XTRA client.
+##################################################
+# XC20_LAUNCH_PROCESS_NAME=garden_app
