Update files to OOS Beta

--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -2,6 +2,24 @@
 
 # defaults for the WLAN Driver
 
+# ifdef VENDOR_EDIT
+gInitialScanNoDFSChnl=1
+gInitialDwellTime=20
+RoamRssiDiff=5
+gEnable2x2=0
+g11dSupportEnabled=1
+gSoftApMaxPeers=8
+gRAFilterEnable=0
+gRoamBmissFirstBcnt=25
+gRoamBmissFinalBcnt=35
+RTSThreshold=117350
+gTcpDelAckThresholdHigh=10000
+gDroppedPktDisconnectTh=1024
+gRuntimePM=0
+gMCAddrListEnable=0
+gBpfFilterEnable=0
+gEnablePowerSaveOffload=1
+# endif /* VENDOR_EDIT */
 
 # Enable IMPS or not
 gEnableImps=1
@@ -142,7 +160,9 @@ gFixedRate=0
 
 # RTS threshold
 
-RTSThreshold=1048576
+#ifdef VENDOR_EDIT
+#RTSThreshold=1048576
+#endif VENDOR_EDIT
 
 
 # Intra-BSS forward
@@ -157,7 +177,9 @@ WmmIsEnabled=0
 
 # 802.11d support
 
-g11dSupportEnabled=0
+#ifdef VENDOR_EDIT
+#g11dSupportEnabled=0
+#endif VENDOR_EDIT
 
 # 802.11h support
 
@@ -171,8 +193,8 @@ EseEnabled=1
 ImplicitQosIsEnabled=0
 gNeighborScanTimerPeriod=200
 
-gNeighborLookupThreshold=85
-gNeighborReassocThreshold=88
+gNeighborLookupThreshold=76
+gNeighborReassocThreshold=81
 
 gNeighborScanChannelMinTime=20
 gNeighborScanChannelMaxTime=30
@@ -186,7 +208,9 @@ FastRoamEnabled=1
 #Check if the AP to which we are roaming is better than current AP in terms of RSSI.
 #Checking is disabled if set to Zero.Otherwise it will use this value as to how better
 #the RSSI of the new/roamable AP should be for roaming
-RoamRssiDiff=5
+#ifdef VENDOR_EDIT
+#RoamRssiDiff=3
+#endif VENDOR_EDIT
 
 # If the RSSI of any available candidate is better than currently associated
 # AP by at least gImmediateRoamRssiDiff, then being to roam immediately (without
@@ -283,9 +307,9 @@ BandCapability=0
 
 #Beacon Early Termination (1 = enable the BET feature, 0 = disable)
 
-enableBeaconEarlyTermination=1
+enableBeaconEarlyTermination=0
 
-beaconEarlyTerminationWakeInterval=8
+beaconEarlyTerminationWakeInterval=3
 
 
 #SOFTAP Channel Range selection
@@ -341,10 +365,9 @@ gEnableBypass11d=1
 
 gEnableDFSChnlScan=1
 
-gInformBssRssiRaw=0
 
 gVhtChannelWidth=2
-gEnableLogp=0
+gEnableLogp=1
 
 
 # Enable Automatic Tx Power control
@@ -366,7 +389,9 @@ gVhtTxMCS=2
 # VHT Tx/Rx MCS values for 2x2
 # Valid values are 0,1,2. If commented out, the default value is 0.
 # 0=MCS0-7, 1=MCS0-8, 2=MCS0-9
-gEnable2x2=1
+#ifdef VENDOR_EDIT
+#gEnable2x2=1
+#endif VENDOR_EDIT
 gVhtRxMCS2x2=2
 gVhtTxMCS2x2=2
 
@@ -452,7 +477,9 @@ gFlexConnectPowerFactor=0
 gNumChanCombinedConc=60
 
 #Enable Power Save offload
-gEnablePowerSaveOffload=4
+#ifdef VENDOR_EDIT
+#gEnablePowerSaveOffload=5
+#endif VENDOR_EDIT
 
 #Enable firmware uart print
 gEnablefwprint=0
@@ -503,13 +530,13 @@ gActiveBpfMode=1
 gEnableMCCAdaptiveScheduler=1
 
 #Enable or Disable p2p device address administered
-isP2pDeviceAddrAdministrated=0
+isP2pDeviceAddrAdministrated=1
 
 # RX packet handling options
 # 0: no rx thread, no RPS, for MDM
 # 1: RX thread
 # 2: RPS
-rxhandle=1
+rxhandle=2
 
 # Remove Overlap channel restriction
 gEnableOverLapCh=0
@@ -586,8 +613,10 @@ gSapSccChanAvoidance=0
 # help if the lifetime in RA is less than 3*60=3min. Then
 # we need to change it, though it is uncommon.
 # Enable RA filtering offload
+#ifdef VENDOR_EDIT
 #gRAFilterEnable=1
-#gRArateLimitInterval=900
+#endif VENDOR_EDIT
+gRArateLimitInterval=300
 
 # Inactivity time (in ms) to end TX Service Period while in IBSS power save mode
 gIbssTxSpEndInactivityTime=10
@@ -631,7 +660,10 @@ gTDLSIdlePacketThreshold=1
 gEnableSelfRecovery=1
 
 #Enable MC address filtering offload
-gMCAddrListEnable=1
+#ifdef VENDOR_EDIT
+#gMCAddrListEnable=1
+#endif VENDOR_EDIT
+
 # Enable Runtime PM Feature.
 # Enabling this feature will put target wow and shutdown pcie link
 # when inactivity is detected in WLAN Driver.
@@ -640,12 +672,15 @@ gMCAddrListEnable=1
 # 0 - disable
 # 1 - enable
 
-gRuntimePM=1
+#ifdef VENDOR_EDIT
+#gRuntimePM=1
+#endif VENDOR_EDIT
+
 # When gRuntimePM is disabled gRuntimeAutoTime won't take effect.
 # The Time is in msec.
 # 100 is min, 10000 is max, 500 is default.
 
-gRuntimePMDelay=1500
+gRuntimePMDelay=500
 
 # Enable to check FW hash if secure FW feature is enabled. It's for defconfig
 # builds only since it will be ignored in performance/release builds.
@@ -669,37 +704,6 @@ gExtScanEnable=1
 
 gEnableModulatedDTIM=2
 gMaxLIModulatedDTIM=6
-
-# Custom Additions
-
-# Disable 11AC for hotspot
-gSapForce11NFor11AC=1
-
-gIgnorePeerHTopMode=1
-gIgnorePeerErpInfo=1
-
-# Enable Active mode offload
-gActiveModeOffload=1
-
-# Prefer connecting to 5Ghz AP even if its RSSI is lower by 5dBm than the 2.4Ghz AP
-gRoamPrefer5GHz=1
-gSelect5GHzMargin=5
-
-# beacon missed count threshold (by Oneplus)
-gRoamBmissFirstBcnt=25
-gRoamBmissFinalBcnt=35
-
-# limit max peers to 10
-gSoftApMaxPeers=10
-
-# set continuous packets dropping threshold to max
-gDroppedPktDisconnectTh=1024
-
-# disable packet logging
-gEnablePacketLog=0
-
-# Tune BMPS listening interval
-gBmpsModListenInterval=8
 
 END
 
